schema/testdata/validation_operation_set_expression_unresolvable_lhs/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    operations {
        create createProfile(username) {
            @set(profile.identit = ctx.identity)
        }
    }
}
