schema/testdata/errors/operation_set_forbidden_value_expression.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        update createProfile(id) with (username) {
            //expect-error:18:34:AttributeExpressionError:The @set attribute cannot be a value condition and must express an assignment
            @set(profile.identity)
        }
    }
}
